--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,246 @@
 @import 'css-reset.css';
 
-/* CSS here :) */
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: 'Poppins';
+    margin: 0;
+}
+
+nav {
+    align-items: center;
+    background-color: grey;
+    display: flex;
+    height: 30px;
+    justify-content: space-between;
+}
+
+.alogo {
+    /* border: 2px solid black; */
+    flex: 60%;
+    margin-left: 10px;
+}
+
+nav ul {
+    /* border: 2px solid black; */
+    display: flex;
+    flex: 40%;
+    justify-content: space-evenly;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.spaceship {
+    align-items: center;
+    background-image: url("../imgs/bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    height: 50vw;
+    justify-content: center;
+    width: 100vw;
+}
+
+.container {
+    border: 4px solid white;
+    display: flex;
+    width: 70%;
+}
+
+.container h1 {
+    color: white;
+    flex: 40%;
+    font-size: 50px;
+}
+
+h2 {
+    color: white;
+    font-size: 30px;
+}
+
+.subcontainer {
+    background-color: rgba(80, 77, 77, 0.6);    ;
+    display: flex;
+    flex: 60%;
+    flex-direction: column;
+}
+
+.subsubcontainer {
+    border-top: 2px solid white;
+    display: flex;
+}
+
+.subcontainer p {
+    color: white;
+    flex: 50%;
+    font-size: 15px;
+}
+
+.features {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px;
+}
+
+.subfeatures {
+    align-items: center;
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+    width: 25%;
+}
+
+.subfeatures button {
+    margin: 10px;
+    /* width: 20%; */
+}
+
+h3 {
+    font-size: 15px;
+    padding: 10px;
+}
+
+.subfeatures img {
+    height: 50px;
+    width: 50px;
+}
+
+/* .containertwo {
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    height: 50vh;
+    width: 100vw;
+} */
+
+.greycontainer {
+    color: white;
+    background-color: grey;
+    height: 625px;
+    position: relative;
+}
+
+.greycontainer h1 {
+    font-size: 100px;
+    padding-left: 10%;
+    padding-top: 100px;
+}
+
+.greycontainer p {
+    font-size: 20px;
+    padding-left: 10%;
+    padding-top: 20px;
+}
+
+.subgreycontainer {
+    background-color: grey;
+    border: 4px solid white;
+    left: 10%;
+    padding: 10px;
+    position: absolute;
+    text-align: center;
+    top: 90%;
+}
+
+h4 {
+    color: red;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.bluecontainer {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(21,181,229,0.24833683473389356) 25%, rgba(86,146,149,0.49763655462184875) 50%, rgba(30,167,217,0.7469362745098039) 75%, rgba(0,255,246,1) 100%);
+    color: white;
+    height: 625px;
+    text-align: right;
+}
+
+.bluecontainer h1 {
+    font-size: 100px;
+    padding-right: 10%;
+    padding-top: 100px;
+}
+
+.bluecontainer p {
+    font-size: 20px;
+    padding-right: 10%;
+    padding-top: 20px;
+}
+
+.catscontainer {
+    display: flex;
+    flex-direction: column;
+    /* height: 625px; */
+    height: auto;
+    width: 100vw;
+}
+
+.catsrow {
+    display: flex;
+}
+
+.cats {
+    max-width: calc(100%/3);
+}
+
+.formcontainer {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+form {
+    color: grey;
+    display: flex;
+    flex-direction: column;
+}
+
+form div {
+    padding-top: 10px;
+}
+
+button {
+    background-image: url("imgs/icon_send.svg");
+    background-size: cover;
+    height: 25px;
+    width: 25px;
+}
+
+.listsection {
+    border-top: 2px solid black;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.listsection ul li {
+    padding: 10px;
+}
+
+a {
+    color: grey;
+    text-decoration: none;
+}
+
+input {
+    border-color: grey;
+    border-radius: 5px;
+}
+
+.inputtext {
+    height: 25px;
+}
